--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "type": "commonjs",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -21,7 +22,7 @@
     "moment": "^2.30.1",
     "mqtt": "^5.10.2",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
