updated code with dotenv file

--- a/.env
+++ b/.env
@@ -5,3 +5,13 @@ APPLICATION_ID=fc7761bc-e9c4-4bba-8d9f-e2d4b51e3fb1
 GATEWAYS_ID=0016c001ff1e7a17
 
 
+PG_HOST=localhost
+PG_PORT=5432
+PG_DATABASE=Robot_clp_data
+PG_USER=postgres
+PG_PASSWORD=1983
+
+
+MQTT_URL='mqtt://103.161.75.85:1885'
+GATEWAY_API_URL=http://103.161.75.85:8092
+WEATHER_API_KEY=1b29179a8d70b1612449ed1bcddba70e
