--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.4.1",
+    "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "cron": "^3.3.1",
@@ -18,10 +20,12 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
     "mqtt": "^5.10.2",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "socket.io": "^4.8.1",
