--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.6.0",
     "json2csv": "^6.0.0-alpha.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.48",
     "mqtt": "^5.10.2",
     "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1",
