added error detail

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ APPLICATION_ID=9cfa0f4a-29e6-4aa1-b3b1-96d99fb67fc2
 
 GATEWAYS_ID=0016c001ff1e7a17
 
-MQTT_URL=mqtt://103.161.75.85:1885;
-GATEWAY_API_URL=http://103.161.75.85:8092;;
+MQTT_URL=mqttp://103.161.75.85:1885
+GATEWAY_API_URL=http://103.161.75.85:8092;
 WEATHER_API_KEY=1b29179a8d70b1612449ed1bcddba70e
 
 
@@ -36,3 +36,5 @@ PANNELS_GAP=0.5
 
 REDIS_PORT=6379
 REDIS_HOST=localhost
+
+AWS_ENDPOINT_URL=http://ec2-3-108-161-18.ap-south-1.compute.amazonaws.com:7002/aegeus/device-raw-data
