--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.7.0",
     "amqplib": "^0.10.5",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
@@ -31,5 +31,8 @@
     "pg": "^8.13.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
+  },
+  "devDependencies": {
+    "prisma": "^6.7.0"
   }
 }
